Build a bigram model

--- a/notebooks/ngrams.ipynb
+++ b/notebooks/ngrams.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
      "text": [
       "[nltk_data] Downloading package movie_reviews to\n",
       "[nltk_data]     /home/codespace/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/movie_reviews.zip.\n"
+      "[nltk_data]   Package movie_reviews is already up-to-date!\n"
      ]
     },
     {
@@ -45,7 +45,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,51 +69,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# let's extract all the bigrams where the context token is \"people\"\n",
-    "people_bigram_1n = {}\n",
-    "for bigram in review_bigrams:\n",
-    "    if bigram[0].lower() == \"people\":\n",
-    "        target_token = bigram[1].lower()\n",
-    "        if target_token in people_bigram_1n:\n",
-    "            people_bigram_1n[target_token] = people_bigram_1n[target_token] + 1\n",
-    "        else:\n",
-    "            people_bigram_1n[target_token] = 1\n",
-    "\n",
-    "        print(people_bigram_1n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('plot', ':')\n",
-      "(':', 'two')\n",
-      "('two', 'teen')\n",
-      "('teen', 'couples')\n",
-      "('couples', 'go')\n",
-      "('go', 'to')\n",
-      "('to', 'a')\n",
-      "('a', 'church')\n",
-      "('church', 'party')\n",
-      "('party', ',')\n",
-      "(',', 'drink')\n",
-      "('drink', 'and')\n",
-      "('and', 'then')\n",
-      "('then', 'drive')\n",
-      "('drive', '.')\n",
-      "('.', 'they')\n",
-      "('they', 'get')\n",
-      "('get', 'into')\n",
-      "('into', 'an')\n"
+      "[('who', 147), ('.', 116), (',', 108), ('are', 73), ('in', 69), ('will', 41), ('to', 39), ('have', 36), (\"'\", 27), ('that', 26)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let's extract all the bigrams where the context token is \"people\"\n",
+    "from collections import Counter\n",
+    "# find all the target tokens that appear after \"people\"\n",
+    "target_tokens = []\n",
+    "for bigram in review_bigrams:\n",
+    "    if bigram[0].lower() == \"people\":\n",
+    "        target_token = bigram[1].lower()\n",
+    "        target_tokens.append(target_token)\n",
+    "\n",
+    "people_bigram_lm = Counter(target_tokens)\n",
+    "# print the top 10 most common bigrams that start with \"people\"\n",
+    "print(people_bigram_lm.most_common(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "StopIteration",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m n \u001b[38;5;241m<\u001b[39m \u001b[38;5;28mmax\u001b[39m:\n\u001b[0;32m----> 4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mnext\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mreview_bigrams\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m      5\u001b[0m     n \u001b[38;5;241m=\u001b[39m n \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "\u001b[0;31mStopIteration\u001b[0m: "
      ]
     }
    ],
