Altered the bigram model

--- a/notebooks/ngrams.ipynb
+++ b/notebooks/ngrams.ipynb
@@ -58,60 +58,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# make all the bigrams for this entire corpus\n",
-    "# there's a method in nltk that doe sthis for us!\n",
+    "# there's a method in nltk that does this for us!\n",
     "review_bigrams = nltk.bigrams(movie_reviews.words())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('with', ['your', 'the', 'movies', 'little', 'the']), ('enter', ['your']), ('also', ['wrapped']), ('mess', ['with']), ('problems', ['with']), ('line', ['with']), ('video', ['with']), ('hot', ['with']), ('blair', ['witch']), ('know', ['who', 'the', 'why'])]\n",
-      "[('with', ['your', 'the', 'movies', 'little', 'the']), ('enter', ['your']), ('also', ['wrapped']), ('mess', ['with']), ('problems', ['with']), ('line', ['with']), ('video', ['with']), ('hot', ['with']), ('blair', ['witch']), ('know', ['who', 'the', 'why'])]\n",
-      "['good', 'the', 'dreams', 'characters', 'others', 'strange', 'disappearances', 'a', 'tons', 'given', 'people', '.', 'pretty']\n"
+      "[('chasing', 1)]\n"
      ]
     }
    ],
    "source": [
-    "# now we want to build a full bigram model for all context tokens\n",
+    "# let's extract all the bigrams where the context token is \"people\"\n",
     "from collections import Counter\n",
-    "\n",
-    "# build the bigrams again\n",
-    "review_bigrams = list(nltk.bigrams(movie_reviews.words()))[:1000]\n",
-    "\n",
-    "# use a dictionary to keep track of all the context tokens\n",
-    "bigram_lm = {}\n",
-    "target_tokens = {}\n",
-    "\n",
-    "# figure out all the word types first\n",
-    "vocabulary = set([word.lower() for word in movie_reviews.words()])\n",
-    "\n",
-    "# build the bigram model\n",
+    "# finall all the target tokens that appear after \"people\"\n",
+    "target_tokens = []\n",
     "for bigram in review_bigrams:\n",
-    "    context_token = bigram[0].lower()\n",
-    "    target_token = bigram[1].lower()\n",
-    "    if context_token in target_tokens:\n",
-    "        target_tokens[context_token].append(target_token)\n",
-    "    else:\n",
-    "        target_tokens[context_token] = [target_token]\n",
+    "    if bigram[0].lower() == 'people':\n",
+    "        target_token = bigram[1].lower()\n",
+    "        target_tokens.append(target_token)\n",
     "\n",
-    "for context_token in target_tokens.keys():\n",
-    "    bigram_lm[context_token] = Counter(target_tokens)\n",
-    "\n",
-    "# What did we build? Let's take a look at the bigram model\n",
-    "print(bigram_lm['people'].most_common(10))\n",
-    "print(bigram_lm['what'].most_common(10))\n",
-    "print(bigram_lm['people']['are'])"
+    "people_bigram_lm = Counter(target_tokens)\n",
+    "# Print the top 10 most common bigrams that start with \"people\"\n",
+    "print(people_bigram_lm.most_common(10))"
    ]
   }
  ],
